# Signaly

./: .env  .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yaml  docker-publish.yaml  rust.yml
docs/: produced_message.md  quick_start.md  report_instructions.md
signaly/: Cargo.toml
signaly-db/: Cargo.toml
signaly-db/src/: cassandra.rs  lib.rs
signaly-db/src/influxdb/: mod.rs  pool.rs
signaly-db/src/kafka/: mod.rs  pool.rs
signaly-db/src/rabbitmq/: mod.rs  pool.rs
signaly-error/: Cargo.toml
signaly-error/src/: lib.rs
signaly-telemetry/: Cargo.toml
signaly-telemetry/src/: lib.rs  metrics.rs
signaly/src/: helpers.rs  main.rs  models.rs
src/: helpers.rs  main.rs  model.rs
src/database/: cassandra.rs  mem.rs  postgres.rs
src/router/: mod.rs  signal.rs  suspend.rs
