[package]
name = "signaly"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
warp = "0.3.5"
serde = { version = "1.0.163", features = ["derive"] }

cdrs = "2.3.3"
memcache = "0.17.0"

jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
dotenv = "0.15.0"
uuid = { version = "1.3.3", features = ["v4"] }
anyhow = "1.0.71"
reqwest = { version = "0.11.17", features = ["json"] }
chrono = "0.4.25"
serde_yaml = "0.9.21"