[package]
name = "signaly"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
warp = "0.3.5"
serde = { version = "1.0.188", features = ["derive"] }

cdrs = "2.3.3"
memcache = "0.17.0"

jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["v4"] }
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["json"] }
chrono = "0.4.26"
serde_yaml = "0.9.25"