[workspace]
resolver = "2"
members = [
    "signaly",
    "signaly-db",
    "signaly-error"
]

[workspace.package]
version = "0.0.1"
description = ""
readme = "README.md"
edition = "2021"
license = "MPL"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
