[package]
name = "signaly-db"
version = "0.1.0"
description = """
Handle database and message broker connection pools for InfluxDB, Kafka
and potentially Apache Cassandra and RabbitMQ.
"""
readme.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
r2d2 = "0.8"
influxdb = { version = "0.7", optional = true }
scylla = { version = "0.12", optional = true }
kafka = { version = "0.10", optional = true }
lapin = { version = "2.3.3", optional = true }
futures-executor = { version = "0", optional = true }

[features]
default = ["timeseries", "apache_kafka", "cassandra"]
timeseries = ["influxdb"]
cassandra = ["scylla"]
apache_kafka = ["kafka"]
rabbitmq = ["lapin", "futures-executor"]
